--- a/APPS/reloj/RellotgeJAIS/app/src/main/res/layout/activity_wait.xml
+++ b/APPS/reloj/RellotgeJAIS/app/src/main/res/layout/activity_wait.xml
@@ -3,8 +3,34 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
+    android:background="@color/black"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".screens.user.WaitActivity">
+
+    <ImageButton
+        android:id="@+id/unpairBtn"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="20dp"
+        android:src="@drawable/ic_clock_pairing"
+        android:padding="10dp"
+        android:background="@color/transparent"
+        />
+
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        android:paddingHorizontal="10dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:gravity="center"
+        android:textColor="@color/white"
+        android:text="Waiting for matches\nPress the mobile button to load the match data in here"
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
