--- a/APPS/movil/RefereezyApp/app/src/main/res/layout/activity_main.xml
+++ b/APPS/movil/RefereezyApp/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
         android:background="@color/transparent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintVertical_bias=".25"
+        app:layout_constraintVertical_bias=".18"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
@@ -36,10 +36,11 @@
         android:layout_height="0dp"
         android:layout_marginTop="70dp"
         android:layout_marginBottom="16dp"
-        app:layout_constraintTop_toBottomOf="@id/splash_progress_bar"
+        app:layout_constraintBottom_toTopOf="@id/actionBtn"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent">
+        app:layout_constraintTop_toBottomOf="@id/splash_progress_bar"
+        >
 
         <LinearLayout
             android:id="@+id/splash_status_container"
@@ -48,5 +49,16 @@
             android:paddingHorizontal="15dp"
             android:orientation="vertical" />
     </ScrollView>
+
+    <Button
+        android:id="@+id/actionBtn"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginBottom="80dp"
+        android:layout_width="250dp"
+        android:layout_height="54dp"
+        android:text="Continue"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
