Working basic comunication from api to clock

--- a/APPS/reloj/RellotgeJAIS/app/src/main/res/layout/activity_main.xml
+++ b/APPS/reloj/RellotgeJAIS/app/src/main/res/layout/activity_main.xml
@@ -22,6 +22,7 @@
 
     <TextView
         android:id="@+id/nextActivity"
+        android:visibility="gone"
         android:layout_width="110dp"
         android:layout_height="30dp"
         android:background="@drawable/roundlarge_button"
