--- a/APPS/reloj/RellotgeJAIS/app/src/main/res/xml/network_security_config.xml
+++ b/APPS/reloj/RellotgeJAIS/app/src/main/res/xml/network_security_config.xml
@@ -2,6 +2,7 @@
 <network-security-config>
     <domain-config cleartextTrafficPermitted="true">
         <domain includeSubdomains="true">smcardona.tech</domain>
+        <domain includeSubdomains="true">192.168.1.138</domain>
         <domain includeSubdomains="true">10.0.2.2</domain>
         <domain includeSubdomains="true">172.20.10.3</domain>
     </domain-config>
