Added modifications to socket.io connections

--- a/APPS/reloj/RellotgeJAIS/app/src/main/res/layout/activity_team_pick.xml
+++ b/APPS/reloj/RellotgeJAIS/app/src/main/res/layout/activity_team_pick.xml
@@ -50,7 +50,7 @@
         android:background="@drawable/round_button"
         android:contentDescription="Botón tarjeta"
         android:padding="12dp"
-        android:scaleType="centerCrop"
+        android:scaleType="fitCenter"
         android:src="@drawable/ic_launcher_foreground"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@id/guideline_vertical"
@@ -66,7 +66,7 @@
         android:background="@drawable/round_button"
         android:contentDescription="Botón tarjeta"
         android:padding="12dp"
-        android:scaleType="centerCrop"
+        android:scaleType="fitCenter"
         android:src="@drawable/ic_launcher_foreground"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/guideline_vertical"
