--- a/APPS/web/src/public/styles/reports.css
+++ b/APPS/web/src/public/styles/reports.css
@@ -574,6 +574,7 @@ nav li.active::after {
   font-style: italic;
   color: var(--gray-color);
   font-size: 14px;
+  width: max-content;
 }
 
 /* Responsive adjustments */
