--- a/APPS/reloj/RellotgeJAIS/app/src/main/res/xml/network_security_config.xml
+++ b/APPS/reloj/RellotgeJAIS/app/src/main/res/xml/network_security_config.xml
@@ -4,6 +4,8 @@
         <domain includeSubdomains="true">smcardona.tech</domain>
         <domain includeSubdomains="true">192.168.1.138</domain>
         <domain includeSubdomains="true">10.0.2.2</domain>
+        <domain includeSubdomains="true">192.168.239.201</domain>
         <domain includeSubdomains="true">172.20.10.3</domain>
+        <domain includeSubdomains="true">192.168.145.201</domain>
     </domain-config>
 </network-security-config>
