--- a/APPS/movil/RefereezyApp/app/src/main/res/layout/activity_acta.xml
+++ b/APPS/movil/RefereezyApp/app/src/main/res/layout/activity_acta.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <androidx.drawerlayout.widget.DrawerLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -65,7 +66,7 @@
                 android:layout_height="wrap_content">
 
                 <LinearLayout
-                    android:id="@+id/weekMatches"
+                    android:id="@+id/closestMatches"
                     android:orientation="vertical"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"/>
@@ -75,7 +76,7 @@
                     android:layout_width="match_parent"
                     style="@style/MatchDayTitle"
                     android:visibility="gone"
-                    android:text="Future matches"
+                    android:text="Ended matches"
                     android:layout_height="wrap_content"/>
 
                 <LinearLayout
