--- a/APPS/movil/RefereezyApp/app/src/main/res/menu/drawer_menu.xml
+++ b/APPS/movil/RefereezyApp/app/src/main/res/menu/drawer_menu.xml
@@ -7,7 +7,7 @@
         android:id="@+id/nav_settings"
         android:title="Acount" />
     <item
-        android:id="@+id/certificates"
+        android:id="@+id/nav_certificates"
         android:title="Certificates" />
 
 </menu>
