--- a/APPS/movil/RefereezyApp/app/src/main/res/layout/activity_profile.xml
+++ b/APPS/movil/RefereezyApp/app/src/main/res/layout/activity_profile.xml
@@ -1,127 +1,144 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
+    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".screens.user.ProfileActivity">
 
-    <FrameLayout
-        android:id="@+id/topMenu"
-        android:background="@color/white"
-        android:padding="10dp"
-        app:layout_constraintTop_toTopOf="parent"
+    <!-- CONTENIDO PRINCIPAL -->
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/main"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent">
 
-        <ImageButton
-            android:id="@+id/menuBtn"
-            android:layout_gravity="center_vertical|start"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:src="@drawable/ic_menu"
-            android:background="@color/transparent"/>
+        <!-- Top Menu -->
+        <FrameLayout
+            android:id="@+id/topMenu"
+            android:background="@color/white"
+            android:padding="10dp"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="50dp"
-            android:layout_gravity="center_vertical"
-            android:layout_marginLeft="82dp"
-            android:textSize="36dp"
-            android:fontFamily="@font/lato_bold"
-            android:textStyle="bold"
-            android:textColor="@color/black"
+            <ImageButton
+                android:id="@+id/menuBtn"
+                android:layout_gravity="center_vertical|start"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:src="@drawable/ic_menu"
+                android:background="@color/transparent"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="50dp"
+                android:layout_gravity="center_vertical"
+                android:layout_marginLeft="82dp"
+                android:textSize="36dp"
+                android:fontFamily="@font/lato_bold"
+                android:textStyle="bold"
+                android:textColor="@color/black"
+                android:gravity="center"
+                android:text="Account"/>
+
+            <ImageButton
+                android:id="@+id/matchBtn"
+                android:layout_gravity="center_vertical|end"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:src="@drawable/ic_football"
+                android:background="@color/transparent"/>
+        </FrameLayout>
+
+        <!-- Content -->
+        <LinearLayout
+            android:orientation="vertical"
+            app:layout_constraintTop_toBottomOf="@id/topMenu"
+            app:layout_constraintBottom_toTopOf="@id/logoutBtn"
             android:gravity="center"
-            android:text="Account"/>
-
-        <ImageButton
-            android:id="@+id/matchBtn"
-            android:layout_gravity="center_vertical|end"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:src="@drawable/ic_football"
-            android:background="@color/transparent"/>
-
-    </FrameLayout>
-
-    <LinearLayout
-        android:orientation="vertical"
-        app:layout_constraintTop_toBottomOf="@id/topMenu"
-        app:layout_constraintBottom_toTopOf="@id/logoutBtn"
-        android:gravity="center"
-        android:paddingHorizontal="70dp"
-        android:layout_width="match_parent"
-        android:layout_height="0dp">
-
-        <TextView
-            android:id="@+id/userField"
-            style="@style/AppTextField"
-            android:text="Full name"/>
-
-        <TextView
-            android:id="@+id/dniField"
-            style="@style/AppTextField"
-            android:text="Personal ID"/>
-
-        <LinearLayout
-            android:gravity="center_vertical"
+            android:paddingHorizontal="70dp"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="0dp">
 
-            <EditText
-                android:id="@+id/passwordField"
+            <TextView
+                android:id="@+id/userField"
                 style="@style/AppTextField"
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:inputType="textPassword"
-                android:textSize="15sp"
-                android:enabled="false"
-                android:hint="Password"
-                android:textColorHint="@color/black"/>
+                android:text="Full name"/>
 
-            <ImageButton
-                android:id="@+id/editPasswordBtn"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:layout_marginHorizontal="10dp"
-                android:background="@color/transparent"
-                android:src="@drawable/ic_edit" />
+            <TextView
+                android:id="@+id/dniField"
+                style="@style/AppTextField"
+                android:text="Personal ID"/>
+
+            <LinearLayout
+                android:gravity="center_vertical"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <EditText
+                    android:id="@+id/passwordField"
+                    style="@style/AppTextField"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:inputType="textPassword"
+                    android:textSize="15sp"
+                    android:enabled="false"
+                    android:hint="Password"
+                    android:textColorHint="@color/black"/>
+
+                <ImageButton
+                    android:id="@+id/editPasswordBtn"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_marginHorizontal="10dp"
+                    android:background="@color/transparent"
+                    android:src="@drawable/ic_edit" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:gravity="center_vertical"
+                android:layout_height="wrap_content">
+
+                <EditText
+                    android:id="@+id/clockCodeField"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:enabled="false"
+                    style="@style/AppTextField"
+                    android:textSize="15sp"
+                    android:text="Clock code"/>
+
+                <ImageButton
+                    android:id="@+id/editClockBtn"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:src="@drawable/ic_edit"
+                    android:background="@color/transparent"
+                    android:layout_marginHorizontal="10dp"/>
+            </LinearLayout>
         </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:gravity="center_vertical"
-            android:layout_height="wrap_content">
+        <!-- Logout Button -->
+        <Button
+            android:id="@+id/logoutBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginBottom="140dp"
+            android:text="Log out"
+            app:layout_constraintBottom_toBottomOf="parent"/>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
-            <EditText
-                android:id="@+id/clockCodeField"
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:enabled="false"
-                style="@style/AppTextField"
-                android:textSize="15sp"
-                android:text="Clock code"/>
-
-            <ImageButton
-                android:id="@+id/editClockBtn"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:src="@drawable/ic_edit"
-                android:background="@color/transparent"
-                android:layout_marginHorizontal="10dp"/>
-        </LinearLayout>
-
-    </LinearLayout>
-
-    <Button
-        android:id="@+id/logoutBtn"
+    <!-- MENÚ LATERAL -->
+    <com.google.android.material.navigation.NavigationView
+        android:id="@+id/nav_view"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginBottom="140dp"
-        android:text="Log out"
-        app:layout_constraintBottom_toBottomOf="parent"/>
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:fitsSystemWindows="true"
+        app:menu="@menu/drawer_menu"/>
+</androidx.drawerlayout.widget.DrawerLayout>
