--- a/refereezy-website/frontend/style/base.css
+++ b/refereezy-website/frontend/style/base.css
@@ -3,9 +3,9 @@
     --bg: #202020;
     --nav-bg: #2b2b2b;
     --text: #ffffff;
-    --primary: #7ed957;
-    --secondary: #27c02e;
-    --hover: #6bc746;
+    --primary: #5de04e;
+    --secondary: #1bc52c;
+    --hover: #1bc52c;
     --error: #ff3838;
     --success: #2ecc71;
     --info: #3498db;
@@ -14,6 +14,20 @@
     --dropdown-hover: #404040;
     --dropdown-border: rgba(126, 217, 87, 0.3);
     --separator: rgba(126, 217, 87, 0.5);
+    --card-bg: #2b2b2b;
+    --card-border: #3a3a3a;
+    --card-hover: #3f3f3f;
+    --grid-header: rgba(87, 217, 89, 0.9);
+    --grid-bg: rgba(43, 43, 43, 0.8);
+    --row-hover: rgba(87, 217, 89, 0.2);
+    --form-bg: rgba(43, 43, 43, 0.95);
+    --border: #3a3a3a;
+    --dropdown-bg: #333333;
+    --dropdown-hover: #404040;
+    --dropdown-border: rgba(89, 217, 87, 0.3);
+    --shadow: rgba(87, 217, 104, 0.2);
+    --shadow-hover: rgba(87, 217, 104, 0.4);
+
 }
 
 * {
@@ -42,6 +56,7 @@ body {
 .nav-container {
     max-width: 80rem;
     margin: 0 auto;
+    padding: 0 2rem;
 }
 
 .nav-content {
